<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".ui.SignUpActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/name_edt"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rfc_logo" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <EditText

                android:id="@+id/name_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edt_bg"
                android:gravity="center"
                android:hint="@string/name_edt"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#504848"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Signup_txt"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edt_bg"
                android:gravity="center"
                android:hint="@string/email_edt"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#674848"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/name_edt"
                app:layout_constraintStart_toStartOf="@+id/name_edt"
                app:layout_constraintTop_toBottomOf="@+id/name_edt" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edt_bg"
                android:gravity="center"
                android:hint="@string/password_edt"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#784949"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/email_edt"
                app:layout_constraintStart_toStartOf="@+id/email_edt"
                app:layout_constraintTop_toBottomOf="@+id/email_edt" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_edt"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#B36147"
                android:text="@string/sign_up_btn"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/alreadyHaveAccountTextview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/alreadyHaveAccountTextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="8dp"
                android:text="@string/already_have_an_account_tv"
                android:textColor="#673030"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/Signup_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up_page_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_edt"
                android:background="@drawable/edt_bg"
                android:textSize="16sp"
                android:textColorHint="#674848"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/password_edt"
                app:layout_constraintStart_toStartOf="@+id/password_edt"
                app:layout_constraintTop_toBottomOf="@+id/password_edt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>