<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"

    tools:context=".ui.LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">



            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="88dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edt_bg"
                android:gravity="center"
                android:hint="@string/email_edt"
                app:startIconDrawable="@drawable/leave"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="#674848"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/Signup_txt"
                app:layout_constraintStart_toStartOf="@+id/Signup_txt"
                app:layout_constraintTop_toBottomOf="@+id/Signup_txt" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edt_bg"
                android:gravity="center"
                android:hint="@string/password_edt"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#784949"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/email_edt"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/email_edt"
                app:layout_constraintTop_toBottomOf="@+id/email_edt" />

            <TextView
                android:id="@+id/confirmPassword_Edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="Forget Password"
                android:inputType="textPersonName"
                android:textColor="#0D2CD8"
                android:textColorHint="#784949"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/email_edt"
                app:layout_constraintStart_toStartOf="@+id/password_edt"
                app:layout_constraintTop_toBottomOf="@+id/password_edt" />

            <TextView
                android:id="@+id/Signup_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:text="Login-Page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:backgroundTint="#EE0505"
                android:padding="5dp"
                android:text="@string/sign_up_btn"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/signin_Button"
                app:layout_constraintTop_toBottomOf="@+id/password_edt" />

            <Button
                android:id="@+id/signin_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#303F9F"
                android:padding="5dp"
                android:text="@string/sign_in_btn"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/signup_btn"
                app:layout_constraintEnd_toStartOf="@+id/signup_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/club_tv"
        android:textColor="@color/white"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/view2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rfc_logo" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>